Started on the layout pages, including the not-found pages; did some clean-up work on route generation so there's more attempts than before (and therefore less chance it doesn't find a route)

--- a/route-randomizer/tsconfig.json
+++ b/route-randomizer/tsconfig.json
@@ -6,7 +6,10 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
   "include": [
     "**/*.ts",
