--- a/route-randomizer/package.json
+++ b/route-randomizer/package.json
@@ -14,8 +14,10 @@
     "@expo/vector-icons": "^14.1.0",
     "@mapbox/polyline": "^1.2.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
+    "axios": "^1.7.9",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "dotenv": "^16.4.5",
     "expo": "~53.0.22",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
@@ -23,6 +25,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
+    "expo-location": "~18.1.5",
     "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -33,6 +36,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
