--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:ci": "jest --runInBand"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@mapbox/polyline": "^1.2.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
-    "axios": "^1.7.9",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.5",
     "expo": "~53.0.22",
     "expo-blur": "~14.1.5",
@@ -45,10 +48,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^30.0.0",
     "@types/mapbox__polyline": "^1.0.5",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^53.0.10",
+    "msw": "^2.11.6",
+    "ts-jest": "^29.4.5",
     "typescript": "~5.8.3"
   },
   "private": true
