--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,5 +53,5 @@ jobs:
         run: npm install -g eas-cli
 
       - name: Build Android app
-        run: eas build --platform android --non-interactive --no-wait || true
+        run: eas build --platform android --non-interactive --no-wait
         continue-on-error: true
