Reorganized codebase by separating frontend UI code from backend services

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,10 @@
     "strict": true,
     "paths": {
       "@/*": [
-        "./*"
+        "./frontend/*"
+      ],
+      "@/backend/*": [
+        "./backend/*"
       ]
     },
     "typeRoots": [
